# zhiclean-ai-assistant

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
RAG部分/: README.md  bm25.py  demo.py  file_history_store.py  hybrid_retriever.py  knowledge_base.py  mcp_server.py  rag.py  rerank.py  vector_stores.py
agent部分/: README.md  agent_demo.py  agent_tools.py  app_qa.py  app_upload.py  graph.py  mcp_client.py  react_agent.py  state.py
agent部分/tools/: __init__.py  external_tools.py
api/: dependencies.py  main.py
api/routers/: agent.py  knowledge.py  rag.py
api/schemas/: agent.py  knowledge.py  rag.py
data/: user_behavior.csv
docs/: Z2_Pro_产品手册.txt  Z3_Ultra_新品发布.txt  保养维护指南.txt  售后服务政策.txt  常见故障排查.txt
go-weather-server/: Dockerfile  README.md  go.mod  main.go
go-weather-server/internal/mcp/: protocol.go  server.go
go-weather-server/internal/weather/: client.go
model/: factory.py
tests/: eval_queries.json  test_graph.py  test_memory.py  test_retrieval_eval.py
utils/: logger_handler.py  memory.py  weather_service.py
